<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lejit.thetravellingman.AboutSG"
    android:weightSum="1"
    android:id="@+id/scrollDict">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/FirstView">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/singlish"
                android:id="@+id/Dictionary"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/singlishdictionary"
                android:textSize="10pt"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:background="@color/colorAccent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:id="@+id/dictbut"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SecondView"
            android:layout_gravity="start">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/newimage"
                android:id="@+id/Culture"
                android:scaleType="fitXY"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/culture"
                android:id="@+id/buttoncult"
                android:textSize="10pt"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:background="@color/colorAccent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ThirdView">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/the_boiler_2_1"
                android:id="@+id/Food"
                android:scaleType="fitXY"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/musteat"
                android:id="@+id/mustbtn"
                android:textSize="10pt"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:background="@color/colorAccent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/FourthView">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/legislation_regulation"
                android:id="@+id/Legislation"
                android:scaleType="fitXY"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/legi"
                android:textSize="10pt"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:background="@color/colorAccent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:id="@+id/legbutton"/>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/FifthView">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/photographic_views_of_singapore_plate_03_raffles_quare1"
                android:id="@+id/History"
                android:scaleType="fitXY"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textSize="10pt"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:id="@+id/histbutton"
                android:background="@color/colorAccent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SixthView">

        </RelativeLayout>


    </LinearLayout>


</ScrollView>

